--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '1.3' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,12 +9,13 @@ package:
 source:
   fn: estimability_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/estimability_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/estimability/estimability_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/estimability_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/estimability/estimability_{{ version }}.tar.gz
   sha256: a33179c5fbd6a1a623d90cb6f1743148f92c09429fac466867f3ea70946a2e32
 
 build:
-  number: 0
+  merge_build_host: True  # [win]
+  number: 1
   skip: true  # [win32]
   rpaths:
     - lib/R/lib/
@@ -23,14 +23,15 @@ build:
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
-
   run:
     - r-base
 
 test:
   commands:
-    - $R -e "library('estimability')"  # [not win]
+    - $R -e "library('estimability')"           # [not win]
     - "\"%R%\" -e \"library('estimability')\""  # [win]
 
 about:
@@ -51,3 +52,4 @@ extra:
     - daler
     - jdblischak
     - cbrueffer
+    - dbast
