--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "1.4" %}
+{% set version = "1.4.1" %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,7 +10,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/estimability_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/estimability/estimability_{{ version }}.tar.gz
-  sha256: 4a9eac160958457eeaf442e0bcd698990851b30a8963a3519f2d7da28b4bfa41
+  sha256: c65aaf1e452f3947013d3ce05ae674d48492081f615a942592dc91db780f1124
 
 build:
   merge_build_host: true  # [win]
@@ -23,6 +23,7 @@ build:
 requirements:
   build:
     - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
   run:
