--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set version = "1.5.1" %}
 {% set posix = 'm2-' if win else '' %}
-{% set native = 'm2w64-' if win else '' %}
 
 package:
   name: r-estimability
@@ -13,12 +12,15 @@ source:
   sha256: 3ca6b96a39fd8877e8636f94d20f34308b7296c1376c646703d27df8591644e9
 
 build:
-  merge_build_host: true  # [win]
   number: 0
-  skip: true  # [r_base == "4.2" or win]
+  skip: true  # [win]
   rpaths:
     - lib/R/lib/
     - lib/
+  missing_dso_whitelist:
+    - '*/R.dll'        # [win]
+    - '*/Rblas.dll'    # [win]
+    - '*/Rlapack.dll'  # [win]
 
 requirements:
   build:
